--- a/client/src/components/Tabs/Tabs.css
+++ b/client/src/components/Tabs/Tabs.css
@@ -10,7 +10,6 @@
   line-height: 24px;
   overflow: hidden;
   position: relative;
-
 }
 .selected-tab li {
   border: 2px solid #636363;
@@ -21,8 +20,8 @@
   position: relative;
   z-index: 0;
   color: #636363;
-  width: 12%;
-  font-size: 1.0vw;
+  width: 150px;
+  font-size: .6em;
 }
 
 .selected-tab li.selected {
@@ -40,7 +39,6 @@
   height: 100%;
   width: 44px;
   background-color: #FFF;
-
 }
 .selected-tab li:before {
   left: -24px;
@@ -69,15 +67,15 @@
 .selected-tab li:hover,
 .selected-tab li:hover:before,
 .selected-tab li:hover:after {
-  background-color: #636363;
+  background-color: #636363 !important;
   color: white;
   cursor: pointer;
-  border-bottom-color: #636363;
+  border-bottom-color: #636363 !important;
 }
 .tabs{
-  width: 75%;
   margin: 0 auto;
   text-align: center;
+  display: block;
 }
 
 .tabs:after {
